2007-01-26  Douglas Blank  <dblank@cs.brynmawr.edu>
	* src/ReportBase/ReportUtils.py: 0000875: _ReportUtils.py has incorrect 
	  conversion cm2pt

2007-01-26  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: fix accelerator entries
	(MediaView.define_actions): add tooltip for view menu
	* src/DataViews/_RepositoryView.py: fix accelerator entries
	* src/DataViews/_SourceView.py: fix accelerator entries
	* src/DataViews/_EventView.py: fix accelerator entries
	* src/DataViews/_FamilyList.py: fix accelerator entries
	* src/DataViews/_PlaceView.py: fix accelerator entries
	* src/DataViews/_PersonView.py: fix accelerator entries
	* src/ViewManager.py: fix accelerator entries
	* src/PageView.py: fix accelerator entries
	
2007-01-26 Richard Taylor  <rjt-gramps@thegrindstone.me.uk>
	* src/ObjectSelector/_FilterFrameBase.py: wrap in EventBox so 
	that clipping work properly.
	
2007-01-25  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: keybindings
	* src/DataViews/_RepositoryView.py: keybindings
	* src/DataViews/_SourceView.py: keybindings
	* src/DataViews/_EventView.py: keybindings
	* src/DataViews/_FamilyList.py: keybindings
	* src/DataViews/_PlaceView.py: keybindings
	* src/DataViews/_PersonView.py: keybindings
	* src/ViewManager.py: keybindings
	* src/PageView.py: keybindings

2007-01-25  Benny Malengier  <benny.malengier@ugent.be>
	* src/Filters/Rules/Place/Makefile.am: add new files
	* src/Filters/Rules/Place/_InLatLonNeighborhood.py: added
	* src/Filters/Rules/Place/_HasNoteMatchingSubstringOf.py: added
	* src/Filters/Rules/Place/__init__.py: add new filters

2007-01-25  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_MediaView.py: fix goto-gramps-id key press
	* src/DataViews/_RepositoryView.py: fix goto-gramps-id key press
	* src/DataViews/_SourceView.py: fix goto-gramps-id key press
	* src/DataViews/_EventView.py: fix goto-gramps-id key press
	* src/DataViews/_FamilyList.py: fix goto-gramps-id key press